# Botany

./: .gitignore  .~lock.debug_log.csv#  CLAUDE.md  CMakeLists.txt  description.md  perf_log.csv  perf_log_default_genome.csv  plant.ts  sprint-1.md  world_params.json
.claude/: memory.md
build_debug/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  botany_tests-b12d07c_include.cmake  cmake_install.cmake
build_debug/evolve/: Makefile  cmake_install.cmake
build_debug/glad_cmake/: Makefile  cmake_install.cmake
docs/: Auxin_enhancement.txt  genome_parameters.md  long-term-plan.md
docs/long-term-plan/: README.md
docs/long-term-plan/milestone-1/: README.md
docs/long-term-plan/milestone-2/: README.md  cactus-vs-tree.md  root-shoot-balance.md  stem-cuticle-and-visuals.md  tissue-library.md  vascularization-plan.md  water-model.md  world-physics.md
docs/long-term-plan/milestone-3/: README.md
docs/long-term-plan/milestone-4/: README.md
docs/superpowers/plans/: 2026-04-08-plant-growth-engine.md  2026-04-10-sugar-milestone.md  2026-04-10-sugar-realism.md  2026-04-11-chemical-classes.md  2026-04-11-evolution.md  2026-04-11-gibberellin-ethylene.md  2026-04-12-mass-stress.md  2026-04-15-auxin-canalization.md  2026-04-15-auxin-growth-sensitivity.md  2026-04-15-leaf-auxin-production.md  2026-04-15-water-chemical.md  2026-04-19-compartmented-vascular-model.md  2026-04-19-demand-driven-phloem.md  2026-04-19-root-shoot-balance-feedback.md  2026-04-20-hormone-biology-tree-scale.md  2026-04-21-node-inspector-and-overlay-redesign.md  2026-04-23-plant-compression-plan.md  2026-04-23-plant-snapshot-plan.md
docs/superpowers/specs/: 2026-04-08-plant-growth-engine-design.md  2026-04-10-gibberellin-ethylene-design.md  (+14 more)
shaders/: debug_slice.frag  debug_slice.vert  ground.frag  ground.vert  ground_shadow.frag  ground_shadow.vert  leaf_query.frag  leaf_query.vert  plant.frag  plant.vert  shadow_collect.frag  shadow_collect.vert
src/: app_dump.cpp  app_evolve.cpp  app_headless.cpp  app_playback.cpp  app_realtime.cpp  app_sugar_test.cpp  format.h
src/data/: best_genome.txt  best_genome_monday.txt  best_genome_night.txt
src/engine/: compartments.h  compression.cpp  compression.h  debug_log.cpp  debug_log.h  engine.cpp  engine.h  ethylene.cpp  ethylene.h  genome.h  genome_io.cpp  genome_io.h  gibberellin.cpp  gibberellin.h  global_economy_log.cpp  global_economy_log.h  hormone.cpp  hormone.h  light.cpp  light.h  meristem.cpp  meristem.h  meristem_types.h  node.cpp  node.h  perf_log.h  pin_transport.cpp  pin_transport.h  plant.cpp  plant.h  sugar.cpp  sugar.h  ui_helpers.cpp  ui_helpers.h  vascular.cpp  vascular.h  vascular_sub_stepped.cpp  vascular_sub_stepped.h  world_params.cpp  world_params.h
src/evolution/: evolution_runner.cpp  evolution_runner.h  fitness.cpp  fitness.h  genome_bridge.cpp  genome_bridge.h
src/renderer/: camera.cpp  camera.h  light_system.cpp  light_system.h  renderer.cpp  renderer.h  shader.cpp  shader.h
src/serialization/: plant_snapshot.cpp  plant_snapshot.h  serializer.cpp  serializer.h
tests/: test_auxin_sensitivity.cpp  test_compartments.cpp  test_compression.cpp  test_cytokinin_transport.cpp  test_engine.cpp  test_ethylene.cpp  test_evolution.cpp  test_genome.cpp  test_genome_io.cpp  test_gibberellin.cpp  test_hormone.cpp  test_meristem.cpp  test_node.cpp  test_pin_transport.cpp  test_plant.cpp  test_plant_snapshot.cpp  test_serializer.cpp  test_stem_photosynthesis.cpp  test_sugar.cpp  test_tick_counters.cpp  test_vascular_sub_stepped.cpp  test_vascularization.cpp  test_water.cpp
(+62 files in other folders)
